<resources>
    <string name="app_name">RecipeSwipe</string>

    <!-- Auth -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_email">Invalid email (must contain @)</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="has_account">Already have an account? Login</string>

    <!-- Preferences -->
    <string name="dietary_preferences">Dietary Preferences</string>
    <string name="allergens">Allergens</string>
    <string name="save_continue">Save &amp; Continue</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="nuts">Nuts</string>
    <string name="seafood">Seafood</string>

    <!-- Main Tabs -->
    <string name="discover">Discover</string>
    <string name="cookbook">Cookbook</string>
    <string name="account">Account</string>

    <!-- Discovery -->
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="details">Details</string>
    <string name="no_more_recipes">No more recipes for now!</string>

    <!-- Recipe Detail -->
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="watch_video">Watch Video</string>

    <!-- Account -->
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_delete">Are you sure you want to delete your account? This will clear all data.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>
